add test for feature detect

--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -141,7 +141,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>E:\UlabVTK\VTK-7.1.0\Common\DataModel;E:\TensorFlowCplusplus\feature_detect\feature_detect;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\TensorFlowCplusplus\feature_detect\feature_detect;E:\UlabVTK\aftermake\bin_lib\release\include\vtk-7.1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
