添加真实 vtkImageData 读取；修改 placeholder 名称；

--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="test.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="loadmhd.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="test_detect.cpp" />
