--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="test_detect.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="loadmhd.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
