--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -27,13 +27,7 @@
     <ClInclude Include="test.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="feature_detect.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\feature_detect\feature_detect_cpu.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="tmp.h">
+    <ClInclude Include="feature_detect_cpu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -41,16 +35,10 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="test.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="test_detect.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="loadmhd.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="tmp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
