--- a/feature_detect/feature_detect.vcxproj
+++ b/feature_detect/feature_detect.vcxproj
@@ -49,7 +49,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -154,8 +154,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="checkDevice.h" />
+    <ClInclude Include="feature_detect_gpu.h" />
     <ClInclude Include="feature_detect.h" />
-    <ClInclude Include="feature_detect_dev.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -172,7 +172,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="feature_detect.cpp" />
+    <ClCompile Include="feature_detect_gpu.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
