--- a/feature_detect/feature_detect.vcxproj
+++ b/feature_detect/feature_detect.vcxproj
@@ -145,7 +145,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>tensorflow_cc.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;vtkChartsCore-8.2.lib;vtkCommonDataModel-8.2.lib;vtkIOImage-8.2.lib;vtkCommonCore-8.2.lib;vtkCommonExecutionModel-8.2.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>E:\MyDLTools\tensorflow1.13.1;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v9.1\lib\x64;E:\TensorFlowCplusplus\feature_detect\x64\Release;F:/GitProjects/project/ulabProject/src/thirdparty/curl/lib/$(Configuration);E:\UlabVTK\VTK-8.2.0\build\lib\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>E:\MyDLTools\tensorflow1.13.1;E:\TensorFlowCplusplus\feature_detect\x64\Release;F:/GitProjects/project/ulabProject/src/thirdparty/curl/lib/$(Configuration);E:\UlabVTK\VTK-8.2.0\build\lib\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
